--- a/Configure/Configure.csproj
+++ b/Configure/Configure.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp2.0;net46</TargetFrameworks>
+    <AssemblyName>configure</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
