add node filter command line argument, update README

--- a/Configure/Properties/launchSettings.json
+++ b/Configure/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Configure": {
-      "commandName": "Project",
-      "commandLineArgs": "--pause"
+      "commandName": "Project"
     }
   }
 }
